add parent of Game Search Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameSearchActivity"></activity>
+        <activity android:name=".GameSearchActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.coderknot.gamesearch.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
