--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.coderknot.gamesearch.MainActivity" />
         </activity>
+        <activity android:name=".GamesListActivity"></activity>
     </application>
 
 </manifest>
