add internet permission

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.coderknot.gamesearch">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,7 +23,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.coderknot.gamesearch.MainActivity" />
         </activity>
-        <activity android:name=".GamesListActivity"></activity>
+        <activity android:name=".GamesListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.coderknot.gamesearch.GameSearchActivity" />
+        </activity>
     </application>
 
 </manifest>
